--- a/thoughtshakeup/src/main/AndroidManifest.xml
+++ b/thoughtshakeup/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.md2k.thoughtshakeup" >
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +18,16 @@
         </activity>
         <activity
             android:name=".ActivityExercise"
+            android:uiOptions="splitActionBarWhenNarrow">
+            />
+        </activity>
+        <activity
+            android:name=".ActivityDiary"
+            android:uiOptions="splitActionBarWhenNarrow">
+            />
+        </activity>
+        <activity
+            android:name=".ActivityThoughtShow"
             android:uiOptions="splitActionBarWhenNarrow">
             />
         </activity>
