--- a/thoughtshakeup/src/main/AndroidManifest.xml
+++ b/thoughtshakeup/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo_thought_shake_up"
         android:label="@string/app_name"
         android:theme="@style/AppThemeLightGreenLight">
         <activity
@@ -22,10 +22,16 @@
             />
         </activity>
         <activity
-            android:name=".ActivityDiary"
+            android:name=".ActivityDiaryOld"
             android:uiOptions="splitActionBarWhenNarrow">
             />
         </activity>
+        <activity
+            android:name=".ActivityHistory"
+            android:uiOptions="splitActionBarWhenNarrow">
+            />
+        </activity>
+
         <activity
             android:name=".ActivityThoughtShow"
             android:uiOptions="splitActionBarWhenNarrow">
