--- a/thoughtshakeup/build.gradle
+++ b/thoughtshakeup/build.gradle
@@ -3,13 +3,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 19
     buildToolsVersion "22.0.1"
-
     defaultConfig {
         applicationId "org.md2k.thoughtshakeup"
         minSdkVersion 19
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName '0.3.0'
     }
     buildTypes {
         release {
@@ -20,6 +19,8 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
+    }
+    productFlavors {
     }
 }
 
