--- a/thoughtshakeup/src/main/AndroidManifest.xml
+++ b/thoughtshakeup/src/main/AndroidManifest.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="org.md2k.thoughtshakeup" >
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo_thought_shake_up"
         android:label="@string/app_name"
+        tools:replace="android:theme"
         android:theme="@style/AppThemeLightGreenLight">
         <activity
             android:name=".ActivityThoughtShakeup"
