--- a/thoughtshakeup/src/main/AndroidManifest.xml
+++ b/thoughtshakeup/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:theme="@style/AppThemeLightGreenLight">
         <activity
             android:name=".ActivityThoughtShakeup"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,17 +22,20 @@
         </activity>
         <activity
             android:name=".ActivityExercise"
+            android:screenOrientation="portrait"
             android:uiOptions="splitActionBarWhenNarrow">
             />
         </activity>
         <activity
             android:name=".ActivityHistory"
+            android:screenOrientation="portrait"
             android:uiOptions="splitActionBarWhenNarrow">
             />
         </activity>
 
         <activity
             android:name=".ActivityThoughtShow"
+            android:screenOrientation="portrait"
             android:uiOptions="splitActionBarWhenNarrow">
             />
         </activity>
