- Added Fabric.io support - Adjusted the gradle build file - Currently missing the DataPoint object

--- a/thoughtshakeup/src/main/AndroidManifest.xml
+++ b/thoughtshakeup/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
             />
         </activity>
 
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="1cad146ed866fa3d49c3bc8376ff52af7d9970da" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
