literature, about, copyright page added

--- a/thoughtshakeup/src/main/AndroidManifest.xml
+++ b/thoughtshakeup/src/main/AndroidManifest.xml
@@ -32,6 +32,15 @@
             android:uiOptions="splitActionBarWhenNarrow">
             />
         </activity>
+        <activity android:name=".ActivityAbout"
+            android:label="About"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ActivityLiterature"
+            android:label="Literature"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ActivityCopyright"
+            android:label="Copyright"
+            android:screenOrientation="portrait"/>
 
         <activity
             android:name=".ActivityThoughtShow"
