--- a/thoughtshakeup/build.gradle
+++ b/thoughtshakeup/build.gradle
@@ -1,3 +1,4 @@
+version = '1.0.0'
 buildscript {
     repositories {
         maven { url 'https://maven.fabric.io/public' }
@@ -9,6 +10,7 @@ buildscript {
 }
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply from: 'versioning.gradle'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -21,8 +23,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 21
-        versionCode 11
-        versionName '0.4.3'
+        versionCode buildVersionCode()
+        versionName version
     }
     buildTypes {
         release {
