Based on the mail 1/9/2016 from Gwen,
 On screen 4, change the wording to read: “My thought is based on an “all-or-nothing” or “extreme” view.” This would entail removing the wording “Black-and-white”, which is more polarizing than how clinicians typically speak with patients.
2.       On screen 10, group the “correct” and “incorrect” reasons together. Instead of alternating between correct and incorrect, prompt users for 2 correct reasons, and then 2 incorrect reasons. This is more in line with how the exercise is conducted in a therapeutic session.

--- a/thoughtshakeup/build.gradle
+++ b/thoughtshakeup/build.gradle
@@ -1,4 +1,4 @@
-version = '1.2.1'
+version = '1.2.2'
 buildscript {
     repositories {
         maven { url 'https://maven.fabric.io/public' }
@@ -14,6 +14,8 @@ apply from: 'versioning.gradle'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    maven { url 'https://jitpack.io' }
+    mavenCentral()
 }
 
 def store_file = "keystore_missing"
